Day 29 of 160 Day's GFG code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,9 @@
           "vector": "cpp",
           "xhash": "cpp",
           "xstring": "cpp",
-          "xutility": "cpp"
+          "xutility": "cpp",
+          "algorithm": "cpp",
+          "iterator": "cpp",
+          "xmemory": "cpp"
      }
 }
